[package]
name = "zte"
version = "0.1.0"
authors = ["Joshua Barretto <joshua.s.barretto@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33"
termion = "1.5"
vek = "0.9"
log = "0.4"
simple-logging = "2.0"
directories = "2.0"
lazy_static = "1.1"
serde = "1.0"
serde_derive = "1.0"
config = "0.9"
backtrace = "0.3"
clipboard = "0.5"
vte = "0.8"
