[package]
name = "zte"
version = "0.1.2"
authors = ["Joshua Barretto <joshua.s.barretto@gmail.com>"]
edition = "2018"
description = "A buffer/window-driven text editor that takes inspiration from Howl"
license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["clipboard"]

[dependencies]
clap = "2.33"
termion = "1.5"
vek = "0.9"
log = "0.4"
simple-logging = "2.0"
directories = "2.0"
lazy_static = "1.1"
serde = "1.0"
serde_derive = "1.0"
config = "0.9"
backtrace = "0.3"
clipboard = { version = "0.5", optional = true }
vte = "0.8"
number_prefix = "0.4"
